# waypaper

./: pyproject.toml
i18n/: __init__.py  translations.py  translations.yml
i18n/locale/be/LC_MESSAGES/: messages.po
i18n/locale/de/LC_MESSAGES/: messages.po
i18n/locale/en/LC_MESSAGES/: messages.po
i18n/locale/es/LC_MESSAGES/: messages.po
i18n/locale/fr/LC_MESSAGES/: messages.po
i18n/locale/pl/LC_MESSAGES/: messages.po
i18n/locale/ru/LC_MESSAGES/: messages.po
i18n/locale/zh/LC_MESSAGES/: messages.po
i18n/locale/zh_HK/LC_MESSAGES/: messages.po
waypaper/: __main__.py  app.py  changer.py  common.py  config.py  consts.py  main  options.py
waypaper/backends/: __init__.py  base.py  feh.py  hyprpaper.py  mpvpaper.py  swaybg.py  swww.py  wallutils.py
