[project]
name = "waypaper"
version = "0.1.0"
description = ""
authors = [] # TODO: Fillme
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "babel (>=2.17.0,<3.0.0)",
    "pygobject (>=3.52.3,<4.0.0)",
    "screeninfo (>=0.8.1,<0.9.0)",
    "imageio (>=2.37.0,<3.0.0)",
    "imageio-ffmpeg (>=0.6.0,<0.7.0)",
    "platformdirs (>=4.3.7,<5.0.0)"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

# tbh i dont know how build systems work, i would just replace the setuptools one with poetry
# [build-system]
# requires = ["poetry-core>=2.0.0,<3.0.0"]
# build-backend = "poetry.core.masonry.api"